--- a/lang/en.json
+++ b/lang/en.json
@@ -1,2 +1,27 @@
 {
+    "close": "Mbyll",
+    "clear_all": "Pastro",
+    "cart": "Cart",
+    "cart_empty": "Shporta eshte bosh",
+    "coupon": "Kuponi",
+    "coupon_code": "Kodi i kuponit",
+    "apply": "Apliko",
+    "subtotal": "Nentotali",
+    "tax": "Taksa",
+    "total": "Total",
+    "loading": "Loading...",
+    "customers": "Klientet",
+    "select_customer": "Zgjidh klientin",
+    "search_customers": "Kerko klient...",
+    "enter_3_characters": "Please enter 3 or more characters",
+    "no_customer_found": "Nuk u gjet asnje klient",
+    "add_customer": "Shto klient",
+    "name": "Emri",
+    "surname": "Mbiemri",
+    "username": "Emri i perdoruesit",
+    "email": "Adresa elektronike",
+    "points": "Pike",
+    "customer_added_successfully": "Klienti u shtua me sukses",
+    "search_products": "Kerko produkt ose skano barkodin...",
+    "remove": "Hiq"
 }
